Removed unwanted CSS, disabled widescreen, reduced size of icons

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,7 +3,7 @@
   position: Associate Developer
   company: SAP Labs India
   company-url: https://www.sap.com
-  bio: The *Technical* Guy who spends time coding, designing and watching TV shows. Knows UX/UI designing as well as fullstack and mobile development
+  bio: The *Technical* Guy who spends time coding, designing and watching TV shows. Knows UX/UI designing as well as fullstack and mobile development <br/> <br/>
   social:
     - name: Twitter
       url: https://twitter.com/merbinjanselm
